@@ -1,5 +1,5 @@
 #
-# $Id: altTheme.tcl,v 1.9 2008/11/29 00:43:48 patthoyts Exp $
+# $Id: altTheme.tcl,v 1.10 2008/12/31 21:25:34 jenglish Exp $
 #
 # Ttk widget set: Alternate theme
 #
@@ -11,6 +11,7 @@ namespace eval ttk::theme::alt {
 	-frame 		"#d9d9d9"
 	-window		"#ffffff"
 	-darker 	"#c3c3c3"
+	-border		"#414141"
 	-activebg 	"#ececec"
 	-disabledfg	"#a3a3a3"
 	-selectbg	"#4a6984"
@@ -23,6 +24,7 @@ namespace eval ttk::theme::alt {
 	    -background 	$colors(-frame) \
 	    -foreground 	black \
 	    -troughcolor	$colors(-darker) \
+	    -bordercolor	$colors(-border) \
 	    -selectbackground 	$colors(-selectbg) \
 	    -selectforeground 	$colors(-selectfg) \
 	    -font 		TkDefaultFont \
